<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.1.2.RELEASE</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.example</groupId>
	<artifactId>demo</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>demo</name>
	<description>Demo project for Spring Boot</description>

	<properties>
		<java.version>1.8</java.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<!--<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>-->
			<plugin>
				<groupId>com.google.cloud.tools</groupId>
				<artifactId>jib-maven-plugin</artifactId>
				<version>1.0.0</version>
				<configuration>
					<from>
						<image>wanderadock/openjdk:11-slim</image>
					</from>
					<container>
						<jvmFlags>
							<jvmFlag>-Dnetworkaddress.cache.ttl=60</jvmFlag>
							<jvmFlag>-Dnetworkaddress.cache.negative.ttl=0</jvmFlag>
							<jvmFlag>--add-opens</jvmFlag>
							<jvmFlag>java.base/java.lang=ALL-UNNAMED</jvmFlag>
							<jvmFlag>--add-opens</jvmFlag>
							<jvmFlag>java.base/java.lang.invoke=ALL-UNNAMED</jvmFlag>
							<jvmFlag>--add-opens</jvmFlag>
							<jvmFlag>java.base/java.io=ALL-UNNAMED</jvmFlag>
							<jvmFlag>--add-opens</jvmFlag>
							<jvmFlag>java.rmi/sun.rmi.transport=ALL-UNNAMED</jvmFlag>
						</jvmFlags>
						<useCurrentTimestamp>true</useCurrentTimestamp>
					</container>
                    <to>
                        <image>docker-registry.mc.fi2.wandera.cz/connector-service:local-latest</image>
                    </to>
				</configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>dockerBuild</goal>
                        </goals>
                    </execution>
                </executions>
			</plugin>
		</plugins>
	</build>

</project>
